# SSMSx

./: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.agents/skills/: create-release  ssmsx-design
.claude/skills/create-release/: SKILL.md
.claude/skills/ssmsx-design/: SKILL.md  _adherence.oxlintrc.json  _ds_bundle.js  _ds_manifest.json  readme.md  styles.css
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml
docs/: DEVELOPMENT.md  SPEC.md
scripts/: smoke-sidecar.mjs  smoke-tauri-mcp.mjs
sidecar/: Directory.Build.props  Directory.Packages.props
sidecar/src/Ssmsx.Core/: Ssmsx.Core.csproj
sidecar/src/Ssmsx.Protocol/: ProtocolJsonContext.cs
sidecar/src/Ssmsx.Sidecar/: Program.cs
src/: App.tsx  index.css  main.tsx  monaco-setup.ts
src-tauri/: Cargo.toml  tauri.conf.dev.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  sidecar.rs
src-tauri/src/commands/: connection.rs  explorer.rs  mod.rs  ping.rs  query.rs
src/app/: AboutDialog.tsx  App.tsx
src/components/connection/: ConnectionDialog.tsx  ConnectionList.tsx  ConnectionStringTab.tsx  PropertiesTab.tsx
src/components/ui/: ContextMenu.tsx
src/features/connection/: index.ts
src/features/diagram/: index.ts  types.ts
src/features/explorer/: types.ts
src/features/query/: index.ts  types.ts
src/features/settings/: index.ts  settingsSchema.ts  types.ts
src/shared/components/: ContextMenu.tsx
src/stores/: connectionStore.ts
(+86 files in other folders)
