[package]
name = "ssmsx"
version = "0.1.0"
edition = "2021"

[lib]
name = "ssmsx_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = []
dev-mcp = ["dep:tauri-plugin-mcp-bridge"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-mcp-bridge = { version = "0.11", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.11"
