[package]
name = "ssmsx"
version = "0.1.0"
edition = "2021"

[lib]
name = "ssmsx_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.5.6", features = [] }

[features]
default = []
dev-mcp = ["dep:tauri-plugin-mcp-bridge"]

[dependencies]
tauri = { version = "=2.10.3", features = [] }
tauri-plugin-shell = "=2.3.5"
tauri-plugin-mcp-bridge = { version = "=0.11.2", optional = true }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
tokio = { version = "=1.50.0", features = ["full"] }
uuid = { version = "=1.22.0", features = ["v4"] }
log = "=0.4.29"
env_logger = "=0.11.9"
